@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6819 2004/08/07 12:14:40 wiz Exp $
+$NetBSD: CHANGES,v 1.6820 2004/08/07 13:34:09 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3757,3 +3757,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated xrick to 021212nb4 [wiz 2004-08-07]
 	Updated phpmyadmin to 2.5.7-pl1 [adrianp 2004-08-07]
 	Updated pkgconfig to 0.15.0nb1 [wiz 2004-08-07]
+	Updated suse91_libpng to 9.1nb1 [jdolecek 2004-08-07]
